# Embarcados-Praticas

./: .gitignore  CERTIFICADO_AWS_FIX.md  CMakeLists.txt  CONFIG_TEMPLATE.h  DHT11_TROUBLESHOOTING.md  README.md  check_cert_aws.py  esp_idf_init.sh  sdkconfig  sdkconfig.defaults  test_mqtt_connection.py  test_mqtt_python.py
database/: .gitignore
database/db/: schema.sql
database/src/: mqtt_to_postgres.py
main/: AWS_Wifi.c  CMakeLists.txt  day_night_control.c  day_night_control.h  dht11.c  dht11.h  dht11_sensor.c  dht11_sensor.h  main.c  main_simple.c  mqtt_manager.c  mqtt_manager.h  ntp_sync.c  ntp_sync.h  plant_config.c  status_led.c  status_led.h  uv_sensor.c  wifi_manager.c  wifi_manager.h
main/certs/: 21799d82cb8e53178d50791a8bce841ab0132bdc3596a4350b798c0b5dc0925a-certificate.pem.crt  21799d82cb8e53178d50791a8bce841ab0132bdc3596a4350b798c0b5dc0925a-private.pem.key  21799d82cb8e53178d50791a8bce841ab0132bdc3596a4350b798c0b5dc0925a-public.pem.key  784b1c21017ae276cbea71bc6b3ed0d1fa6377bb594ee4094f9271ff367ecc3e-certificate.pem.crt  86cf2f23eee12460caeaf6c97ae117032f556f433959a2bfd83039ab5fa3ae0c-certificate.pem.crt  AmazonRootCA1.h  certificate.h  private_key.h
